--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@privy-io/react-auth": "^2.8.1",
+    "@privy-io/react-auth": "2.4.3",
     "ethers": "5.7.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
